# thesis

./: .gitignore  1008_debugging_session.md  GEMINI.md  README.md  decision_log.csv  edsa_aurora.net.xml  edsa_aurora.osm  edsa_east.net.xml  edsa_east.osm  edsa_east.rou.xml  edsa_east.sumocfg  edsa_kamuning.osm  foi_transcript.csv  notes.md  output.txt  pyproject.toml  requirements.txt  results.csv  results_1000eps_chap3.csv  results_100eps_chap3.bak  runner.py
data/: dummy_hourly_data.csv  methodology_data_processing.md  prophet_input_E.csv  prophet_input_N.csv  prophet_input_S.csv  prophet_input_W.csv  volume_am.csv  volume_pm.csv  volume_total.csv
docs/: 0924_pipeline_overview.md  1008_debugging_session.md  1009_stabilization_session.md  1011_debug_session.md  CONCEPTUAL_OVERVIEW.md  GEMINI_CONTEXT_SNAPSHOT.md  PROJECT_README.md  PROJECT_STATE_AND_NEXT_STEPS.md  PROJECT_WORKFLOW_EXPLAINED.md  idk  qa_summary_20251009.md
gui/: main.py  modern_main.py
intersections/: edsa_kamuning.net.xml
models/: d3qn_100_real.pth  d3qn_500.pth  d3qn_agent.pth  d3qn_agent_extrastrong.pth  d3qn_agent_medium.pth  d3qn_agent_strong.pth  dqn_1000_mediumsumo.pth  dqn_100_real.pth  dqn_10k.pth  dqn_500.pth  dqn_agent.pth  dqn_agent_100_ep.pth  dqn_agent_100_ep_final.pth  dqn_agent_100_ep_norm.pth  dqn_agent_100_ep_real.pth  dqn_agent_5_ep.pth  dqn_agent_5_ep_final.pth  dqn_agent_5_ep_norm.pth  dqn_agent_5_ep_real.pth  dqn_agent_medium.pth  dqn_agent_stable.pth  dqn_agent_strong.pth  dqn_agent_weak.pth  q-learning_agent.pkl  q-learning_agent_medium.pkl  qlearning_100_real.pkl  (+1 more)
(+38 files in other folders)
